force-app/main/default/objects/SuggestedProduct__c/SuggestedProduct__c.object-meta.xml
<CustomObject>
    <description>[a1B][SuggestedProduct__c]</description>
    <label>Produto Sugerido</label>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Produto Sugerido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Sugeridos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>