force-app/main/default/objects/SuggestedProduct__c/fields/ChannelLkp__c.field-meta.xml
<CustomField>
    <fullName>ChannelLkp__c</fullName>
    <label>Canal</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Produtos Sugeridos</relationshipLabel>
    <relationshipName>SuggestedProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>