force-app/main/default/objects/SuggestedProduct__c/fields/ClassificationTxt__c.field-meta.xml
<CustomField>
    <fullName>ClassificationTxt__c</fullName>
    <label>Classificação</label>
    <length>80</length>
    <type>Text</type>
</CustomField>