force-app/main/default/objects/SuggestedProduct__c/fields/SalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationTxt__c</fullName>
    <label>Organização de Vendas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrganization</valueSetName>
    </valueSet>
</CustomField>